<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Whily</string>
    <string name="action_settings">Settings</string>
    <string name="night">夜间模式</string>
    <string name="day">白天模式</string>
    
    <string name="edit_english">Enter a english file path</string>
    <string name="edit_chinese">Enter a chinese file path</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">Content</string>
    <string name="title_activity_file_dialog">FileDialog</string>
    <string name="location">Curr:</string>
    <string name="cant_read_folder">folder can\'t be read!</string>
    <string name="nnew">New</string>
    <string name="select">Select</string>
    
    <string name="selectEnglish">Select English</string>
    <string name="selectChinese">Select Chinese</string>
    
    <string name="file_name">File name:</string>
    <string name="cancel">Cancel</string>
    <string name="create">Save</string>
    <string name="no_data">No Data</string>

    <color name="gray">#999999</color>
    <color name="white">#ffffff</color>
    <color name="yellow1">#CC9933</color>
    <color name="blue1">#006699</color>
    <color name="green0">#C7EDCC</color>

</resources>
