<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="100dp"
	    android:orientation="horizontal"
	    >
	    
	    <EditText android:id="@+id/edit_english"
	        android:layout_weight="1"
        	android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:hint="@string/edit_english" />
	    
	    <Button
	    	android:id="@+id/selectEnglish"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/selectEnglish"
		    android:onClick="selectFile" />
	    
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="100dp"
	    android:orientation="horizontal"
	    >
	    
	    <EditText android:id="@+id/edit_chinese"
	        android:layout_weight="1"
        	android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:fontFamily="Arial"
	        android:hint="@string/edit_chinese" />
	    
	    <Button
	        android:id="@+id/selectChinese"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:text="@string/selectChinese"
	     android:onClick="selectFile" />
	    
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="100dp"
	    android:orientation="horizontal">
		<Button
			 android:layout_width="fill_parent"
			 android:layout_height="wrap_content" 
			 android:text="@string/button_send" 
			 android:onClick="sendMessage" />
	</LinearLayout>
</LinearLayout>
